fix the bug of not showing rectanglar icon

--- a/client-data/board.css
+++ b/client-data/board.css
@@ -10,13 +10,10 @@ html, body, svg {
   
 /* Create two equal columns that sits next to each other */
 .column {
-	width: 1000px;
-	height: 1500px;
+	width: 50%;
+	height: 100%;
+	position: fixed;
 }
-
-/* #canvas {
-	transform-origin: 0 0;
-} */
 
 #codeShare {
 	height: 100vh;
